[gd_scene load_steps=2 format=1]

[ext_resource path="res://ui/main_menu.gd" type="Script" id=1]

[node name="main_screen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 4.0
margin/right = -1.0
margin/bottom = -4.0
script/script = ExtResource( 1 )

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 130.0
margin/top = 109.0
margin/right = 281.0
margin/bottom = 150.0
text = "S P A C E  K N I G H T"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="results" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 85.0
margin/top = 228.0
margin/right = 321.0
margin/bottom = 242.0
text = "Results"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="blue_team" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 147.0
margin/top = 300.0
margin/right = 291.0
margin/bottom = 314.0
text = "Blue Team : 0 WIN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="red_team" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 145.0
margin/top = 342.0
margin/right = 273.0
margin/bottom = 356.0
text = "Red Team : 0 WIN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="play" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 145.0
margin/top = 551.0
margin/right = 268.0
margin/bottom = 603.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "START"
flat = false

[node name="skill_queue" type="VScrollBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 30.0
margin/top = 400.0
margin/right = 115.0
margin/bottom = 527.0
range/min = 0.0
range/max = 100.0
range/step = 0.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="turret_fixed" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 470.0
margin/right = 261.0
margin/bottom = 514.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "turret_forward"
flat = false

[node name="turret_forward" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 410.0
margin/right = 261.0
margin/bottom = 454.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "turret_fixed"
flat = false

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]

[connection signal="pressed" from="turret_fixed" to="." method="_on_turret_fixed_pressed"]

[connection signal="pressed" from="turret_forward" to="." method="_on_turret_forward_pressed"]


